'overlapping' issue fixed by changing dimensions of section two in media query

--- a/app.css
+++ b/app.css
@@ -234,16 +234,11 @@ height: 450px;
         }
 
 
-.container{
-
-min-width: 480px;
 
 
-}
+.row.two {
 
-.row {
-
-max-width: 480px;
+height: 675px;
 
 }
 
